# aurora-dark

./: .gitignore  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: AccumulatorTable.tsx  BrandMark.tsx  BuildStatusBadge.tsx  Chip.tsx  DegradedBanner.tsx  Dot.tsx  Empty.tsx  ErrorState.tsx  GraphHealth.tsx  Loading.tsx  PageHeader.tsx  Panel.tsx  Pill.tsx  ReactorReadiness.tsx  RunCircles.tsx  StatusBadge.tsx  _stage.tsx
rust/: .gitignore  Cargo.toml  INVENTORY.md  README.md
rust/aurora-leptos/: Cargo.toml  PATTERNS.md  README.md
rust/aurora-leptos/src/: components.rs  graph.rs  lib.rs  tokens.rs  widgets.rs
rust/aurora-leptos/style/: components.css  fonts.css  tokens.css
rust/leptos-gallery/: Cargo.toml  Trunk.toml  gallery.css  index.html
rust/leptos-gallery/src/: main.rs
scripts/: build-css.mjs
src/: BuildStatusBadge.tsx  GraphHealth.tsx  RunCircles.tsx  StatusBadge.tsx  errors.ts  graph.tsx  index.ts  primitives.tsx  states.tsx  theme.css  theme.ts
